# NetRedirector

./: CMakeLists.txt  LICENSE  README.md
sources/: capture.h  main.cpp  tools.h
sources/window/: mainwindow.h  property.h
